primitives/api/test/tests/ui/impl_two_traits_with_same_name.stderr
error: Two traits with the same name detected! The trait name is used to generate its ID. Please rename one trait at the declaration!
  --> $DIR/impl_two_traits_with_same_name.rs:30:15
   |
30 |     impl second::Api<Block> for Runtime {
   |                  ^^^
